--- a/e_m_adventures/src/components/NewSearch/DatePicker/DatePicker.module.css
+++ b/e_m_adventures/src/components/NewSearch/DatePicker/DatePicker.module.css
@@ -7,6 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: var(--main-color-white);
 }
 
 .datePicker {
