--- a/e_m_adventures/src/components/NewSearch/HeaderSearch.module.css
+++ b/e_m_adventures/src/components/NewSearch/HeaderSearch.module.css
@@ -1,10 +1,10 @@
 .headerSearchContainer {
-  max-width: 80vw;
+  width: 100%;
   height: max-content;
   margin: 0 auto;
 }
 .headerSearch {
-  max-width: 80%;
+  max-width: 60%;
   min-width: max-content;
   height: 10rem;
   display: flex;
@@ -31,7 +31,7 @@
 
 .searchBtn:hover,
 .searchBtn:focus {
-  background-color: var(--sec-color-grey-light);
+  background-color: var(--main-color-gold);
 }
 
 .startBtn {
