--- a/e_m_adventures/src/components/NewSearch/HeaderSearchGuests/HeaderSearchGuests.module.css
+++ b/e_m_adventures/src/components/NewSearch/HeaderSearchGuests/HeaderSearchGuests.module.css
@@ -3,6 +3,8 @@
   border-radius: 3rem;
   border: 2px solid var(--main-color-gold);
   margin: 2rem auto;
+  background-color: var(--main-color-white);
+  padding: 2rem 1rem;
 }
 
 .headerSearchGuests p {
