add responsivness to AccommodationContent component

--- a/e_m_adventures/src/components/Accommodation/AccommodationContent/AccommodationCard/AccommodationCard.module.css
+++ b/e_m_adventures/src/components/Accommodation/AccommodationContent/AccommodationCard/AccommodationCard.module.css
@@ -35,3 +35,11 @@
 .accommodationCard__price {
   justify-self: start;
 }
+
+@media (max-width: 320px) {
+  .accommodationCard__img {
+    width: 30rem;
+    border-radius: 2rem;
+    justify-self: center;
+  }
+}
