--- a/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AccommodationInformationContent.module.css
+++ b/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AccommodationInformationContent.module.css
@@ -7,7 +7,7 @@ main {
 .main {
   color: black;
   padding: 2rem;
-  width: 60%;
+  width: 70%;
   margin: 0 auto;
   display: grid;
   grid-template-columns: 60% 40%;
@@ -40,4 +40,10 @@ main {
 .main h4 {
   font-size: 2.2rem;
   font-weight: bold;
+}
+
+@media (max-width: 1095px) {
+  .main {
+    width: 90%;
+  }
 }
