start responsiveness accommodationinformation. 500px. add mobileSearch to accommodationInformation

--- a/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AICSections/SectionHeading/SectionHeading.module.css
+++ b/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AICSections/SectionHeading/SectionHeading.module.css
@@ -32,3 +32,16 @@
 .headingInformation li:last-child {
   float: right;
 }
+
+@media (max-width: 500px) {
+  .headingInformation li:nth-of-type(2)::before {
+    content: '';
+    height: 5px;
+    width: 5px;
+    position: absolute;
+    background-color: var(--sec-color-grey-light);
+    top: 45.7%;
+    left: -8.3%;
+    border-radius: 50%;
+  }
+}
