--- a/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AICSections/AccommodationSearch/AccommodationSearch.module.css
+++ b/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AICSections/AccommodationSearch/AccommodationSearch.module.css
@@ -22,6 +22,7 @@
   border: var(--grey-border-1px);
   border-radius: 1rem;
   box-shadow: 2px 2px 10px var(--sec-color-grey-light);
+  /* background-color: hotpink; */
 }
 
 .header {
@@ -74,4 +75,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media (max-width: 460px) {
+  .searchCard {
+    padding: 1rem;
+  }
 }
