--- a/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AICSections/SectionInformation/SectionInformation.module.css
+++ b/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AICSections/SectionInformation/SectionInformation.module.css
@@ -86,6 +86,7 @@
   margin-left: 2.5rem;
   color: var(--sec-color-grey);
 }
+
 .accommodationFeatures {
   padding: 1rem 0 3rem 0;
   border-bottom: var(--grey-border-1px);
@@ -132,20 +133,42 @@
 @media (max-width: 860px) {
   .sleepCard {
     padding: 1rem;
-    border: var(--grey-border-1px);
-    border-radius: 1rem;
   }
 }
 
 @media (max-width: 790px) {
   .infoHeading ul li:not(:first-child)::before {
-    content: '';
-    height: 3px;
-    width: 3px;
-    position: absolute;
-    background-color: var(--sec-color-grey-light);
     top: 45.7%;
-    left: -11%;
-    border-radius: 50%;
+  }
+}
+
+@media (max-width: 600px) {
+  .infoHeading h2 {
+    /* font-size: 2rem; */
+  }
+
+  .infoHeading ul li:not(:first-child)::before {
+    height: 4px;
+    width: 4px;
+    top: 45.7%;
+    left: -10%;
+  }
+}
+
+@media (max-width: 500px) {
+  .sectionAccommodationInfo {
+    grid-column: 1 / span 2;
+  }
+}
+
+@media (max-width: 460px) {
+  .infoHeading h2 {
+    font-size: 2.3rem;
+  }
+}
+
+@media (max-width: 450px) {
+  .sleepCard {
+    padding: 1rem 0.5rem;
   }
 }
