--- a/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AICSections/AccommodationSearchMobile/AccommodationSearchMobile.module.css
+++ b/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AICSections/AccommodationSearchMobile/AccommodationSearchMobile.module.css
@@ -25,7 +25,7 @@
 
 .mobile_search_btn {
   margin-left: auto;
-  padding: 2rem;
+  padding: 2rem 4rem;
   border-radius: 2rem;
   background-color: var(--main-color-gold);
   border: none;
