--- a/e_m_adventures/src/components/HeaderSearch/HeaderSearchGuests/HeaderSearchGuests.module.css
+++ b/e_m_adventures/src/components/HeaderSearch/HeaderSearchGuests/HeaderSearchGuests.module.css
@@ -3,8 +3,12 @@
   border-radius: 3rem;
   border: 2px solid var(--main-color-gold);
   margin: 2rem auto;
-  background-color: var(--main-color-white);
+  background-color: var(--sec-color-grey-vlight);
   padding: 2rem 1rem;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 5000;
 }
 
 .headerSearchGuests p {
