--- a/e_m_adventures/src/components/HeaderSearch/DatePicker/DatePicker.module.css
+++ b/e_m_adventures/src/components/HeaderSearch/DatePicker/DatePicker.module.css
@@ -1,5 +1,5 @@
 .datePickerContainer {
-  max-width: 70%;
+  min-width: max-content;
   margin: 2rem auto 0 auto;
   padding: 0.5rem;
   border: 2px solid var(--main-color-gold);
@@ -16,10 +16,11 @@
 }
 
 .datePicker {
-  padding: 2rem;
+  padding: 0.5rem 1.5rem;
   display: grid;
   grid-template-columns: repeat(2, max-content);
-  gap: 2rem;
+  gap: 1rem;
+  width: max-content;
 }
 
 .cardGrid {
@@ -37,11 +38,11 @@
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(8, max-content);
 
-  padding: 3rem;
+  padding: 1rem 2rem;
   border: 2px solid var(--main-color-gold);
   border-radius: 3rem;
-  width: 100%;
-  height: 100%;
+  width: max-content;
+
   background-color: var(--main-color-white);
 }
 
@@ -58,7 +59,7 @@
   text-align: center;
   border-radius: 100%;
   margin: 0.5rem;
-  padding: 1rem;
+  padding: 0.5rem;
   border: 2px solid white;
   transition: all 0.5s;
   cursor: pointer;
@@ -127,4 +128,25 @@
 
 .fullDay p {
   color: black;
+}
+
+@media (max-width: 500px) {
+  .datePicker {
+    padding: 0.5rem 1.5rem;
+    display: grid;
+    grid-template-columns: max-content;
+    gap: 1rem;
+    width: max-content;
+  }
+
+  .dayCard {
+    padding: 1rem;
+    margin: 1rem;
+  }
+
+  .dayName {
+    font-size: 2rem;
+    text-align: center;
+    margin-bottom: 2rem;
+  }
 }
