--- a/e_m_adventures/src/components/Header/Header.module.css
+++ b/e_m_adventures/src/components/Header/Header.module.css
@@ -1,20 +1,59 @@
 .header {
-  min-height: 70rem;
-  max-height: 80vh;
+  min-height: 50vh;
   background-color: var(--main-color-black);
-  background-image: url('../../assets/img/caravan.jpg');
-  background-repeat: no-repeat;
-  background-size: 80% 80%;
-  background-position: center;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 2rem;
+  padding: 2rem 1rem;
   position: relative;
+  display: grid;
+  grid-template-columns: 1fr 0.5rem 1fr;
+  grid-template-rows: repeat(2, 1fr) repeat(2, 2fr);
+}
+
+.header > nav {
+  grid-row: 1;
+  grid-column: 1 / span 3;
+}
+
+.header > div:first-of-type {
+  grid-row: 2;
+  grid-column: 1 / span 3;
+}
+
+.header_img_container,
+.header_heading_container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.header_img_container {
+  grid-row: 3 / span 2;
+  grid-column: 1;
+}
+
+.header_img_container img {
+  width: 60rem;
+  border-radius: 2rem;
+}
+
+.header_heading_container {
+  grid-row: 3 / span 2;
+  grid-column: 3;
+  text-align: center;
+}
+
+.line_break {
+  margin: auto;
+  height: 80%;
+  background-color: var(--main-color-gold);
+  width: 100%;
+  grid-row: 3 / span 2;
+  grid-column: 2;
 }
 
 .heading {
-  margin-top: auto;
   color: var(--main-color-white);
   font-size: 4rem;
 }
