--- a/e_m_adventures/src/components/miniComponents/Buttons/HeaderNavigation/NavigationBtn.module.css
+++ b/e_m_adventures/src/components/miniComponents/Buttons/HeaderNavigation/NavigationBtn.module.css
@@ -1,5 +1,5 @@
 .navBtn {
-  position: relative;
+  /* position: relative; */
   padding: 0.5rem;
   margin: 1rem;
   color: var(--main-color-white);
