--- a/e_m_adventures/src/components/Header/Header.module.css
+++ b/e_m_adventures/src/components/Header/Header.module.css
@@ -19,6 +19,7 @@
 .header > div:first-of-type {
   grid-row: 2;
   grid-column: 1 / span 3;
+  margin-bottom: 1rem;
 }
 
 .header_img_container,
@@ -79,19 +80,66 @@
   z-index: 2000;
 }
 
+@media (max-width: 1270px) {
+  .header_img_container img {
+    width: 50rem;
+  }
+}
+
+@media (max-width: 1070px) {
+  .header_img_container img {
+    width: 45rem;
+  }
+}
+
+@media (max-width: 850px) {
+  .header_img_container img {
+    width: 40rem;
+  }
+}
+
+@media (max-width: 790px) {
+  .header_img_container img {
+    width: 43rem;
+  }
+}
+
 @media (max-width: 600px) {
+  .header_img_container img {
+    width: 40rem;
+  }
+
   .header {
     min-height: 40vh;
   }
+}
 
-  .btnPopUp {
-    display: inline;
+@media (max-width: 480px) {
+  .header_img_container img {
+    width: 35rem;
+  }
+}
+
+@media (max-width: 420px) {
+  .header_img_container img {
+    width: 30rem;
+  }
+
+  .heading {
+    color: var(--main-color-white);
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 360px) {
+  .header_img_container img {
+    width: 27rem;
   }
 }
 
 @media (max-width: 390px) {
-  .header {
+  /* .header {
     min-height: 50vh;
     background-size: 80% 50%;
-  }
+  } */
 }
