--- a/e_m_adventures/src/components/Header/HeaderNavigation/HeaderNavigation.module.css
+++ b/e_m_adventures/src/components/Header/HeaderNavigation/HeaderNavigation.module.css
@@ -2,21 +2,23 @@
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .logo {
   width: 15rem;
   flex: 0 1 auto;
   margin-left: 5rem;
+  margin-right: 10%;
 }
 
 .navBtnContainer {
-  margin-left: 14rem;
+  /* margin-left: 14rem; */
+  margin: 0 auto;
 }
 
 .navBtn {
-  position: relative;
+  /* position: relative; */
   padding: 0.5rem;
   margin: 1rem;
   color: var(--main-color-white);
@@ -40,6 +42,7 @@
   justify-content: center;
   align-items: center;
   margin-right: 3rem;
+  /* margin-left: auto; */
 }
 
 .loginManage {
