--- a/e_m_adventures/src/components/HeaderSearch/HeaderSearchAccommodation/HeaderSearchAccommodation.module.css
+++ b/e_m_adventures/src/components/HeaderSearch/HeaderSearchAccommodation/HeaderSearchAccommodation.module.css
@@ -62,3 +62,13 @@
   width: 8rem;
   border-radius: 1rem;
 }
+
+@media (max-width: 600px) {
+  .headerSearchAccommodation {
+    width: 80%;
+  }
+
+  .accommodationCard {
+    width: 80%;
+  }
+}
