--- a/e_m_adventures/src/components/miniComponents/Buttons/HeaderSearchBtn/HeaderSearchBtn.module.css
+++ b/e_m_adventures/src/components/miniComponents/Buttons/HeaderSearchBtn/HeaderSearchBtn.module.css
@@ -2,11 +2,13 @@
   background-color: red;
   border: 2px solid black;
   border-radius: 50%;
-  height: max-content;
+  height: 3rem;
   margin: 0 0.5rem 0 auto;
-  width: max-content;
+  width: 3rem;
+  text-align: center;
 
   z-index: 1;
+  padding: 0;
 }
 
 .btnDelete:hover {
