fix error in booking is avliable function for changeBooking

--- a/e_m_adventures/src/components/Modal/ModifyBookingModal/ModifyBookingModalChange/ModifyBookingModalChange.module.css
+++ b/e_m_adventures/src/components/Modal/ModifyBookingModal/ModifyBookingModalChange/ModifyBookingModalChange.module.css
@@ -147,6 +147,12 @@
   transform: none;
 }
 
+.errorMessage {
+  color: red;
+  width: 100%;
+  text-align: center;
+}
+
 @media screen and (max-width: 500px) {
   .changeBooking_current p,
   .changeBooking_new p {
