add errorContent to AccommodationInformation when no focus is set

--- a/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AccommodationInformationContent.module.css
+++ b/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AccommodationInformationContent.module.css
@@ -12,6 +12,8 @@ main {
   display: grid;
   grid-template-columns: 60% 40%;
   grid-auto-rows: max-content;
+  min-height: 60vh;
+
   /* overflow: hidden; */
 }
 
