fix AccommodationMobileSearch display bug

--- a/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AICSections/AccommodationSearchMobile/AccommodationSearchMobile.module.css
+++ b/e_m_adventures/src/components/Accommodation/AccommodationInformationContent/AICSections/AccommodationSearchMobile/AccommodationSearchMobile.module.css
@@ -10,6 +10,9 @@
   justify-content: center;
   align-items: center;
   border-top: 1px solid var(--sec-color-grey-light);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  bottom: 0;
 }
 
 .mobile_search_content {
