--- a/e_m_adventures/src/components/Modal/ModifyBookingModal/ModifyBookingModalChange/ModifyBookingModalChange.module.css
+++ b/e_m_adventures/src/components/Modal/ModifyBookingModal/ModifyBookingModalChange/ModifyBookingModalChange.module.css
@@ -18,7 +18,7 @@
   grid-column: 5 / span 2;
   grid-row: 2;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 
